processed/gerrit/txt_full/34810.txt
Change:     34810
Subject:    LU-10026: Compress data on client with lz4
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/34810
Change-Id:  I083ec5dd7a61f37727f253897a850dacde55bd90
Project:    fs/lustre-release
Branch:     master
Status:     NEW
Owner:      Anna Fuchs
Created:    2019-05-06 12:27:46.000000000
Updated:    2020-02-03 02:28:49.000000000
Patch Set:  6
Insertions: +714
Deletions:  -68
Comments:   52 (0 unresolved)

--- Labels ---
  Code-Review: (no votes)
  Verified: jenkins: +1

--- Reviewers ---
  REVIEWER: Jenkins, Andreas Dilger, James Simmons, Sebastien Buisson, Anna Fuchs, Patrick Farrell, Neil Brown

--- Commit Message ---
LU-10026: Compress data on client with lz4

Send compressed over network.
The option L_CSERVER determines whether to decompress
the chunks on the server. Otherwise (L_CCLIENT) data will
be passed compressed to ZFS, stored compressed by ZFS, and
decompressed by ZFS when read.

Change-Id: I083ec5dd7a61f37727f253897a850dacde55bd90
Test-Parameters: forbuildonly
Signed-off-by: Anna Fuchs <anna.fuchs@informatik.uni-hamburg.de>

--- Review History ---

--- Message (Anna Fuchs, 2019-05-06 12:27:46.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-05-06 12:29:01.000000000) ---
Patch Set 1:

(10 comments)

10 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Anna Fuchs, 2019-05-06 12:48:14.000000000) ---
Uploaded patch set 2.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-05-06 12:49:17.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/osc/osc_request.c: In function ‘osc_brw_prep_request’:
 /home/green/git/lustre-release/lustre/osc/osc_request.c:2014:9: error: ‘cpga’ undeclared (first use in this function)
          cpga, OST_WRITE,
          ^
 /home/green/git/lustre-release/lustre/osc/osc_request.c:2014:9: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/git/lustre-release/lustre/osc/osc_request.c: At top level:
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (wc-checkpatch, 2019-05-06 12:49:47.000000000) ---
Patch Set 2:

(3 comments)

3 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-05-06 12:57:14.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/osc/osc_request.c: In function ‘osc_brw_prep_request’:
 /home/green/git/lustre-release/lustre/osc/osc_request.c:2017:9: error: ‘cpga’ undeclared (first use in this function)
          cpga, OST_WRITE,
          ^
 /home/green/git/lustre-release/lustre/osc/osc_request.c:2017:9: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/git/lustre-release/lustre/osc/osc_request.c: At top level:
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Jenkins, 2019-05-06 13:08:10.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/4977/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/64184/ : FAILURE

--- Message (Anna Fuchs, 2019-05-06 13:20:24.000000000) ---
Uploaded patch set 3.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-05-06 13:24:07.000000000) ---
Patch Set 3:

(4 comments)

4 code warning(s).
If you believe the warnings are incorrect, please leave a comment with your explanations as a reply to the warning.

--- Message (wc-checkpatch, 2019-05-06 13:24:59.000000000) ---
Patch Set 3:

(3 comments)

3 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Jenkins, 2019-05-06 13:28:48.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/4978/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/64185/ : FAILURE

--- Message (Jenkins, 2019-05-06 13:52:33.000000000) ---
Patch Set 3: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/4979/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/64186/ : FAILURE

--- Message (Anna Fuchs, 2019-05-06 14:44:50.000000000) ---
Uploaded patch set 4.

--- Message (wc-checkpatch, 2019-05-06 14:46:15.000000000) ---
Patch Set 4:

(2 comments)

2 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-05-06 14:50:59.000000000) ---
Patch Set 4:

(3 comments)

3 code warning(s).
If you believe the warnings are incorrect, please leave a comment with your explanations as a reply to the warning.

--- Message (Jenkins, 2019-05-06 15:17:39.000000000) ---
Patch Set 4: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/4980/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/64187/ : SUCCESS

--- Message (Autotest, 2019-05-06 15:18:20.000000000) ---
Patch Set 4:

Patch will not be tested because it is marked forbuildonly

--- Message (Anna Fuchs, 2019-05-06 18:58:45.000000000) ---
Patch Set 4:

(1 comment)

--- Message (Sebastien Buisson, 2019-05-27 15:57:30.000000000) ---
Patch Set 4:

(4 comments)

I cannot comment on the correctness of the compression itself. But the many defines in osc_brw_prep_request() for instance, show the actual need for proper hooks. Those hooks or callbacks would be responsible for carrying out specificities required by transformation operations, such as compression (and encryption could define different hooks/callbacks to plug in where necessary).

--- Message (Anna Fuchs, 2020-01-17 15:07:40.000000000) ---
Uploaded patch set 5.

--- Message (wc-checkpatch, 2020-01-17 15:10:10.000000000) ---
Patch Set 5:

(4 comments)

4 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2020-01-17 15:15:48.000000000) ---
Patch Set 5:

(6 comments)

6 code warning(s).
If you believe the warnings are incorrect, please leave a comment with your explanations as a reply to the warning.

--- Message (Lustre Gerrit Janitor, 2020-01-17 15:15:51.000000000) ---
Patch Set 5:

centos7: Compile failed

rhel8.0: Compile failed


 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/5735/results.html

--- Message (jenkins, 2020-01-17 15:56:56.000000000) ---
Patch Set 5: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/11213/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/71033/ : FAILURE

--- Message (Anna Fuchs, 2020-01-31 23:14:40.000000000) ---
Uploaded patch set 6.

--- Message (wc-checkpatch, 2020-01-31 23:14:58.000000000) ---
Patch Set 6:

(2 comments)

2 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2020-01-31 23:18:00.000000000) ---
Patch Set 6:

Builds for x86_64 centos7,rhel8.0 successful
Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/6148/results.html

 This was detected as a build-only change, no further testing would be performed by this bot.

--- Message (jenkins, 2020-01-31 23:42:23.000000000) ---
Patch Set 6: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/11636/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/71466/ : SUCCESS

--- Message (Autotest, 2020-01-31 23:43:08.000000000) ---
Patch Set 6:

Patch will not be tested because it is marked forbuildonly

--- Message (Maloo, 2020-01-31 23:43:09.000000000) ---
Patch Set 6:

build marked for build only

--- Message (Neil Brown, 2020-02-03 02:28:49.000000000) ---
Patch Set 6:

(10 comments)
